--- a/style.css
+++ b/style.css
@@ -202,17 +202,13 @@ h1{
     transition: 0.3s ease;
     /* transition: margin 0.2s; */
     margin: 0 15px;
+    margin: 0 15px;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 }
-/* .image-carousel img:first-child{
-    width: 540px;
-} */
-/* .t{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    background-color: rgb(211, 209, 96);
-} */
+
 .arrow-button{
     display: flex;
     justify-content: space-between;
